# literature-review-verifier-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_api.bat  run_demo.bat  run_webui.bat  setup_and_run_api.bat  setup_and_run_demo.bat  setup_and_run_webui.bat  start_all.bat
app/: __init__.py  main.py
app/ai_detection/: __init__.py  ai_risk_scorer.py  ai_text_checker.py  feature_extractor.py
app/api/: routes.py
app/core/: config.py  logging.py  schemas.py
app/llm/: __init__.py  base_llm.py  dummy_llm.py  hf_qwen_client.py  lora_qwen_client.py  prompts.py
app/parsers/: __init__.py  citation_parser.py
app/reports/: __init__.py  excel_report.py  markdown_report.py
app/retrievers/: __init__.py  chinese_sources.py  crossref_client.py  openalex_client.py  semanticscholar_client.py
app/review/: __init__.py  review_checker.py
app/routing/: __init__.py  source_router.py
app/scoring/: __init__.py  existence_scorer.py  text_match.py
app/services/: verify_service.py
data/samples/: sample_input.json  sample_references.txt  toy_train.jsonl
docs/: api_examples.md  future_training_plan.md  resume_bullets.md
scripts/: run_demo.py
tests/: test_ai_detection.py  test_api.py  test_parser.py  test_scorer.py  test_training_format.py
training/: build_dataset.py  evaluate_lora.py  formatters.py  infer_lora.py  train_lora.py
webui/: streamlit_app.py
