[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-review-verifier"
version = "0.1.0"
description = "Literature review verification agent with retrieval, rule-based checks, and optional LoRA judge support."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider --ignore-glob=pytest-cache-files-*"